# learn_xiaozhi

./: README.md
learn_xiaozhi_audio/: CMakeLists.txt  sdkconfig.defaults.esp32s3
learn_xiaozhi_audio/main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  idf_component.yml
learn_xiaozhi_audio/main/audio_processing/: wake_word_detect.cc  wake_word_detect.h
learn_xiaozhi_audio/main/boards/bread-compact-wifi/: compact_wifi_board.cc  config.h
learn_xiaozhi_audio/main/boards/bread-compact-wifi-lcd/: compact_wifi_board_lcd.cc
learn_xiaozhi_audio/main/boards/common/: board.h
learn_xiaozhi_audio/main/display/: lcd_display.cc
learn_xiaozhi_display/main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  idf_component.yml  main.cc
learn_xiaozhi_display/main/boards/bread-compact-wifi/: compact_wifi_board.cc  config.h
learn_xiaozhi_display/main/boards/bread-compact-wifi-lcd/: compact_wifi_board_lcd.cc  config.h
learn_xiaozhi_display/main/boards/common/: board.h
learn_xiaozhi_display/main/display/: display.cc
learn_xiaozhi_led/: CMakeLists.txt
learn_xiaozhi_led/main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  idf_component.yml
learn_xiaozhi_led/main/led/: single_led.cc
